--- a/framework/assets/stylish/global/_icons.scss
+++ b/framework/assets/stylish/global/_icons.scss
@@ -15,10 +15,7 @@
 
 // Make icons spin
 .icon_spin {
-  -webkit-animation: spin 2s infinite linear;
-  -moz-animation: spin 2s infinite linear;
-  -o-animation: spin 2s infinite linear;
-  animation: spin 2s infinite linear;
+  @include animation(spin 2s infinite linear);
 }
 @-moz-keyframes spin {
   0% { -moz-transform: rotate(0deg); }
